feat: add feed keyword filters
