# backend/internal/model/model.go
@@ -10,15 +10,17 @@ type Group struct {
 
 // Feed represents an RSS/Atom feed.
 type Feed struct {
-	ID        int64  `json:"id"`
-	GroupID   int64  `json:"group_id"`
-	Name      string `json:"name"`
-	Link      string `json:"link"`
-	SiteURL   string `json:"site_url,omitempty"`
-	Suspended bool   `json:"suspended"`
-	Proxy     string `json:"proxy,omitempty"`
-	CreatedAt int64  `json:"created_at"`
-	UpdatedAt int64  `json:"updated_at"`
+	ID             int64  `json:"id"`
+	GroupID        int64  `json:"group_id"`
+	Name           string `json:"name"`
+	Link           string `json:"link"`
+	SiteURL        string `json:"site_url,omitempty"`
+	Suspended      bool   `json:"suspended"`
+	Proxy          string `json:"proxy,omitempty"`
+	FilterMode     string `json:"filter_mode"`
+	FilterKeywords string `json:"filter_keywords"`
+	CreatedAt      int64  `json:"created_at"`
+	UpdatedAt      int64  `json:"updated_at"`
 
 	FetchState FeedFetchState `json:"fetch_state"`
 
